Новостной сайт на Azure

--- a/dm.MainWeb/Web.config
+++ b/dm.MainWeb/Web.config
@@ -40,7 +40,7 @@
       <rules>
         <rule name="News" stopProcessing="true">
           <match url="^news/?(.*)" />
-          <action type="Rewrite" url="https://sergshubin.wordpress.com/{R:1}" />
+          <action type="Rewrite" url="http://domoknews.azurewebsites.net//{R:1}" />
         </rule>
       </rules>
     </rewrite>
