--- a/dm.MainWeb/Web.config
+++ b/dm.MainWeb/Web.config
@@ -50,7 +50,7 @@
           
         <rule name="News" stopProcessing="true">
           <match url="^news/?(.*)" />
-          <action type="Rewrite" url="http://domoknews.azurewebsites.net//{R:1}" />
+          <action type="Rewrite" url="http://news.domok.net//{R:1}" />
         </rule>
       </rules>
     </rewrite>
